# crypto-ml

./: CHANGELOG.md  README.md
backend/: README.md  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/endpoints/: __init__.py  backtest.py  data.py  models.py
backend/app/core/: backtesting_service.py  data_service.py  modeling_service.py  preprocessing_service.py  task_service.py
backend/app/core/model_wrappers/: __init__.py  catboost_model.py  logistic_regression_model.py  pytorch_gru.py  pytorch_lstm.py  pytorch_mlp.py  random_forest_model.py  xgboost_model.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: backtest.py  common.py  data.py  models.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/backtest/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/data/: page.tsx
frontend/app/models/: page.tsx
frontend/app/results/: page.tsx
frontend/app/results/[id]/: page.tsx
frontend/components/: available-data-summary.tsx  available-data-table.tsx  backtest-configuration.tsx  backtest-results-table.tsx  dashboard.tsx  data-management.tsx  main-nav.tsx  models.tsx  recent-backtests.tsx  time-input.tsx  tradingview-widget.jsx
frontend/lib/: api.ts  types.ts  utils.ts
